[package]
name = "chromium-exec"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.64"
serde = { version = "1.0.126", features = ["derive"] }
my-libc = { path = "my-libc-rs" }

[profile.release]
codegen-units = 1
lto = true
overflow-checks = true

# У меня есть долгие тесты, поэтому включаю оптимизацию. Плюс я не собираюсь использовать debugger
[profile.dev]
opt-level = 3
[profile.test]
opt-level = 3
